# emflow-backend

./: .env.example  .gitignore  README.md  container.py  database.py  embedding_service.py  main.py  pyproject.toml  requirements.txt  schema.py
application/: agent_service.py  data_seeder.py  knowledge_graph_service.py  sample_data.py  schema.py  simple_agent.py
core/: embedding_service.py  knowledge_graph_repository.py  models.py
infrastructure/: neo4j_connection.py  neo4j_repository.py  qwen_embedding_service.py
routers/: agent.py
